# code-server-multiuser

./: Cargo.toml  FAQ.md  README.md
.github/workflows/: rust.yml
src/: container.rs  main.rs  storage.rs  traefik.rs  user.rs
src/templates/: 404.html  dashboard.html  index.html  initsrv.html  login.html  register.html
src/traefik/: traefik_config_dynamic.rs
traefik/: docker-compose.yml  traefik.yml
