[package]
name = "code-server-multiuser"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
actix-files = "0.6.6"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = "0.4.38"
bcrypt = "0.15.1"
log = "0.4"
env_logger = "0.11.5"
tera = "1.14"
serde_yml = "0.0.12"
dirs = "5.0.1"
users= "0.11.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
semver = "1.0.23"
regex = "1.11.0"
filetime = "0.2.25"
uuid = { version = "1.11.0", features = ["v4","v7"] }
lazy_static = "1.5.0"
indexmap = { version = "2.6.0", features = ["serde"] }